Mon Oct 14 09:45:13 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian.h: Mark vinfo struct and get_vinfo_() function as
	  @private for doxygen.

Thu Oct 10 10:36:45 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/: Methods and functions which take a string to
	  unserialise now consistently call that parameter "serialised".

Mon Oct 07 04:08:14 GMT 2013  Olly Betts <olly@survex.com>

	* tests/zlib-vg.c: Fix two warnings when compiled with clang.

Fri Oct 04 19:46:16 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.cc,backends/chert/chert_check.cc: Correct
	  failure message which talks above the root block when it's actually
	  testing a leaf key.

Fri Oct 04 04:51:39 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.cc,backends/chert/chert_check.cc: Escape
	  invalid UTF-8 data in keys and tags reported by xapian-check, using
	  the same code we use to clean up string in object descriptions.

Fri Oct 04 04:50:52 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_check.cc,backends/chert/chert_check.cc: Fix
	  xapian-check to report block numbers correctly for links within the
	  B-tree.

Thu Oct 03 07:35:44 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_dbcheck.cc,backends/chert/chert_dbcheck.cc: If
	  the METAINFO key is missing, only report it once per table.

Sat Sep 28 09:27:51 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian.h: Hide struct vinfo and get_vinfo_() from SWIG and
	  doxygen.

Sat Sep 28 06:25:44 GMT 2013  Olly Betts <olly@survex.com>

	* api/version.cc,include/xapian.h: Reimplement version functions to
	  use a single function in libxapian which returns a pointer to a
	  static const struct containing the version information, with inline
	  wrappers in the API header which call this.  This means we only need
	  one relocation instead of 4.
	* tests/api_none.cc: New testcase version1 to provide coverage for the
	  version API functions.
