@@ -1,3 +1,9 @@
+Tue Oct 15 03:16:04 GMT 2013  Olly Betts <olly@survex.com>
+
+	* include/xapian/enquire.h,include/xapian/unicode.h: Mark internal
+	  methods which are public for implementation convenience as
+	  "@private" for doxygen where they weren't already.
+
 Mon Oct 14 09:45:13 GMT 2013  Olly Betts <olly@survex.com>
 
 	* include/xapian.h: Mark vinfo struct and get_vinfo_() function as
